# task_manager

./: .gitignore
client/: empty.js
server/: Cargo.toml  diesel.toml
server/migrations/2025-10-01-134251-0000_create_users/: up.sql
server/src/: main.rs  schema.rs
server/src/controllers/: users_controller.rs
server/src/db/: connection.rs
server/src/models/: user.rs
server/src/routers/: mod.rs  user_routes.rs
